--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clear": "^0.1.0",
     "commander": "^6.1.0",
     "figlet": "^1.5.0",
+    "ora": "^5.1.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
