--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.20.0",
     "chalk": "^4.1.0",
     "clear": "^0.1.0",
+    "cli-format": "^3.0.9",
     "cli-table": "^0.3.1",
     "commander": "^6.1.0",
     "figlet": "^1.5.0",
